chore:covered till ep:5

--- a/1_episode/styles.css
+++ b/1_episode/styles.css
@@ -5,11 +5,11 @@
 }
 
 .logo {
-  width: 200px;
-  margin: 10px;
+  width: 100px;
 }
 
 .navbar ul {
+  margin-top: 25px;
   display: flex;
   list-style-type: none;
 }
@@ -40,4 +40,9 @@
 
 .res-cards {
   display: flex;
+}
+
+.filter-btn {
+  margin: 10px;
+  cursor: pointer;
 }
