--- a/1_episode/styles.css
+++ b/1_episode/styles.css
@@ -26,7 +26,7 @@
   margin: 5px;
   padding: 5px;
   width: 200px;
-  height: 400px;
+  height: 420px;
 }
 .res-logo {
   width: 195px;
@@ -40,9 +40,33 @@
 
 .res-cards {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .filter-btn {
-  margin: 10px;
+  margin-left: 10px;
   cursor: pointer;
+}
+
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.shimmer-cards {
+  height: 420px;
+  width: 200px;
+  margin: 5px;
+  padding: 5px;
+  background-color: #f0f0f0;
+}
+
+.login {
+  padding: 10px;
+  margin-right: 15px;
+}
+
+.filter {
+  display: flex;
+  margin: 10px;
 }
